# C-Server

./: .env  AsyncIO.drawio  CMakeLists.txt  Makefile  README.md  build.bat  compose.yml  dockerfile  request_async.bat  time_request.bat
app/: CMakeLists.txt
app-libuv/: CMakeLists.txt
app-libuv/include/: Connection.hh  Connection.hpp  Request.hh  conn_handler.hh  req_cb.hh  req_data.hh
app-libuv/src/: Program.cc  main.cc
app/include/: Request.hpp  conn_handler.h  conn_handler.hh  req_cb.h  req_cb.hh  req_data.h  req_handler.h
app/src/: CMakeLists.txt  IocpServer.cc  Main.cpp  WsaPollServer.cc  main-epoll.cc  main.c  main.cc
app/src/libuv/: main.cc
app/src/libuv/include/: req_callback.hh  req_data.hh  server_callback.hh
app/src/libuv_tcp/: main.cc
app/src/multi_platform/: main.cc
app/src/windows/: wsa_poll.cpp
lib/: CMakeLists.txt
lib/include/: ResponseData.hh  cli.hh  conn_core.h  conn_manager.h  content.h  core.h  core.hh  event_manager.hh  file_mapper.h  handle.h  handler.h  http_client.hh  http_server.hh  iocp_server.hh  req_content.h  req_handler.h  req_handler.hh  req_parser.hh  req_router.h  request_handler.hh  res_content.h  res_content.hh  res_data.hh  res_handler.h  res_handler.hh  response_handler.hh  responses.h  server.h  socket.h
lib/src/: CMakeLists.txt  RequestHandler.cc  RequestHandler.cpp  RequestParser.cc  RequestParser.cpp  ResponseData.cc  ResponseData.cpp  conn_manager.c  content.c  event_manager.cc  file_mapper.c  handle.c  handler.c  http_client.cc  http_server.cc  manager.c  req_content.c  req_handler.c  req_handler.cc  req_parser.c  req_parser.cc  req_router.c  request_handler.cc  res_content.c  res_content.cc  res_data.cc  res_handler.c  res_handler.cc  response_handler.cc  responses.c  socket.c  tcp.c  tcp_server.c
tests/: Makefile  curl-format.txt  request_async.bat  time_request.bat
